# quist

./: Cargo.toml  LICENSE  README.md  build.rs
crates/quist/: Cargo.toml
crates/quist/src/: lib.rs  utils.rs
crates/quist_cli/: Cargo.toml  build.rs
crates/quist_cli/src/: main.rs
src/: app.rs  client.rs  lib.rs  main.rs  opts.rs  utils.rs
src/app/: client.rs
src/app/client/: response.rs
src/client/: auth.rs  data.rs  response.rs
test/: bar.txt  foo.txt
