[package]
name = "quist"
version = "0.1.0"
authors = ["Gabriel Sanches <gabriel@gsr.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }

[dev-dependencies]
maplit = "1.0"
mockito = "0.27"
pretty_assertions = "0.6"
serde_json = "1.0"
