[package]
name = "quist"
version = "0.2.2"
authors = ["Gabriel Sanches <gabriel@gsr.dev>"]
homepage = "https://github.com/gbrlsnchs/quist"
edition = "2018"

[dependencies]
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread", "signal", "sync"] }

[dev-dependencies]
maplit = "1.0"
mockito = "0.27"
pretty_assertions = "0.6"
serde_json = "1.0"

[build-dependencies]
structopt = "0.3"
