[package]
name = "quist_cli"
version = "0.1.0"
authors = ["Gabriel Sanches <gabriel@gsr.dev>"]
homepage = "https://github.com/gbrlsnchs/quist"
edition = "2018"

[dependencies]
quist = { path = "../quist" }
ctrlc = { version = "3.1", features = ["termination"] }
futures = "0.3"
structopt = "0.3"
tokio = { version = "0.2", features = ["fs", "macros", "signal", "sync"] }

[build-dependencies]
structopt = "0.3"
quist = { path = "../quist" }
